--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
 
 @font-face {
     font-family: "Makisupa";
-    src: url("fonts/Makisupa.ttf");
+    src: url("fonts/makisupa.ttf");
 }
 
 body, a, p, button {
