--- a/error/style.css
+++ b/error/style.css
@@ -5,7 +5,7 @@
 body {
     background-color: var(--background);
     overflow: hidden;
-    font-family: 'Barlow', sans-serif;
+    font-family: 'Chakra Petch', sans-serif;
     color: #bbbbbb;
 }
 
