--- a/style.css
+++ b/style.css
@@ -380,10 +380,10 @@ body {
 
     #spotify {
         position: relative;
-        /*bottom: 50px;*/
-        margin-top: 100px;
+        margin: 100px;
         flex-direction: column;
     }
+
 }
 
 /*
