--- a/style.css
+++ b/style.css
@@ -5,15 +5,16 @@
     --mid: #5A6988;
     --dark2: #3A4466;
     --dark1: #262B44;
+    --darkOpacity: #3A446622;
     --link: #FF0044;
     --background: #181425;
     --color1: #E86A73;
     --color2: #BC4A9B;
     --color3: #793A80;
-    --font-tiny: 1em;
-    --font-small: 1.2em;
-    --font-regular: 1.5em;
-    --font-medium: 2em;
+    --font-tiny: 0.8em;
+    --font-small: 1em;
+    --font-regular: 1.2em;
+    --font-medium: 1.5em;
     --font-large: 2.3em;
     --font-title: 3em;
 }
@@ -58,7 +59,7 @@ body {
 
 #mainContent {
     width: 100vw;
-    height: 100vw;
+    height: 100vh;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
@@ -74,6 +75,7 @@ body {
     align-items: center;
     justify-content: center;
     margin: 50px;
+    z-index: 1;
 }
 
 #leftContent {
@@ -115,20 +117,141 @@ body {
 }
 
 /*
-    Spotify
+    About/IRL Section
 */
 
-#spotify {
+#toggleMid, #toggleMidBack {
+    background-color: transparent;
+    outline: none;
+    border: none;
+    color: var(--color2);
+    font-size: var(--font-regular);
+}
+
+#toggleMid:hover, #toggleMidBack:hover {
+    color: var(--color1);
+} 
+
+#toggleMid {
+    margin-top: 20px;
+}
+
+#toggleMidBack {
+    margin-bottom: 10px;
+}
+
+#aboutme {
     position: absolute;
-    bottom: 10px;
-    display: none;
+    display: flex;
+    opacity: 0;
     flex-direction: column;
+    flex-grow: 2;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.aboutMeClass {
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+    background-color: var(--darkOpacity);
+    border: 3px dotted var(--mid);
+}
+
+#spotify {
+    padding: 10px 10px 10px 10px;
+}
+
+#irl_movies {
+    padding: 10px 10px 0px 10px;
+}
+
+#irl_skills {
+    padding: 10px;
+}
+
+#irl_about {
+    padding: 10px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.irl_about_text {
+    text-align: left;
+    color: var(--light2);
+}
+
+#irl_about img {
+    width: auto;
+    height: 100px;
+    border-radius: 5px;
+    object-fit: cover;
+    padding: 10px;
+}
+
+#aboutMeControls {
+    padding: 5px 10px;
+    background-color: var(--dark1);
+    border-radius: 5px;
+    width: 180px;
+    margin-top: 10px;
+}
+
+#aboutMeControls button {
+    border: none;
+    margin: 5px;
+    padding: 0;
+    width: 40px;
+    height: 40px;
+    background-size: cover;
+}
+
+#aboutMeControlMusic {
+    background: url("images/irl_icons/music.png");
+}
+
+#aboutMeControlMusic:hover {
+    background: url("images/irl_icons/music_active.png");
+    background-size: cover;
+}
+
+#aboutMeControlMovies {
+    background: url("images/irl_icons/movies.png");
+}
+
+#aboutMeControlMovies:hover {
+    background: url("images/irl_icons/movies_active.png");
+    background-size: cover;
+}
+
+#aboutMeControlBooks {
+    background: url("images/irl_icons/books.png");
+}
+
+#aboutMeControlBooks:hover {
+    background: url("images/irl_icons/books_active.png");
+    background-size: cover;
+}
+
+#aboutMeControls img {
+    width: 50px;
+    height: 50px;
+}
+
+.aboutMeSub {
+    display: flex;
+    flex-direction: row;
+}
+
+#irlMovieSub {
+    transform: translateX(20px);
 }
 
 #spotifySub {
-    transform: translateX(-50px);
-    display: flex;
-    flex-direction: row;
+    padding-left: 40px;
+    transform: translateX(-30px);
 }
 
 #spotifyRight {
@@ -141,26 +264,58 @@ body {
 
 #spotifyImg {
     transform: rotate(-5deg);
-    width: 120px;
-    height: 120px;
+    width: 100px;
+    height: 100px;
+}
+
+#irlMoviesRight {
+    width: 170px;
+    height: 180px;
+    padding: 5px 20px 5px 0px;
+    transform: translateX(-10px);
+}
+
+#irlMoviesTicket {
+    transform: rotate(5deg);
+    height: 160px;
+}
+
+#irlMoviesImage {
+    position: relative;
+    transform: rotate(5deg);
+    height: 135px;
+    width: 110px;
+    right: -1px;
+    top: -150px;
+    z-index: -2;
+    object-fit: contain;
+}
+
+#irlMoviesStars {
+    margin: 15px 20px 0 0;
+    text-align: right;
+}
+
+#irlMoviesStars i {
+    color: var(--light1);
 }
 
 #vinyl {
     position: relative;
-    top: -111px;
-    right: 60px;
+    top: -92px;
+    right: 50px;
     z-index: -2;
 }
 
 #spotifyImgDiv {
     margin: 0 0 0 50px;
-    width: 130px;
-    height: 130px;
+    width: 110px;
+    height: 110px;
 }
 
 #vinyl img {
-    width: 110px;
-    height: 110px;
+    width: 90px;
+    height: 90px;
     -webkit-animation: rotating 15s linear infinite;
 }
 
@@ -178,8 +333,8 @@ body {
     width: 50px !important;
     height: 50px !important;
     position: absolute;
-    top: 30px;
-    right: 50px;
+    top: 20px;
+    right: 40px;
     z-index: -3;
     background-color: white;
 }
@@ -194,18 +349,39 @@ body {
 }
 
 #spotifyArtist {
-    color: var(--mid);
-    font-size: var(--font-small);
     margin: 0 0 2px 0;
 }
 
+#irlMoviesBy {
+    text-align: right;
+    margin: 0 10px 0 0;
+}
+
+#irlMoviesSeason {
+    text-align: right;
+    margin: 0 15px 0 0;
+}
+
+#spotifyArtist, #irlMoviesBy, #irlMoviesSeason {
+    color: var(--mid);
+    font-size: var(--font-small);
+}
+
 #spotifyAlbum {
-    color: var(--light2);
+    margin: 0 0 2px 10px;
+    text-align: left;
+}
+
+#irlMoviesTitle {
+    text-align: right;
+    margin: 0 5px 0 0;
+}
+
+#spotifyAlbum, #irlMoviesTitle {
+    color: var(--light1);
     max-width: 500px;
     font-size: var(--font-medium);
-    margin: 0 0 2px 10px;
-    text-decoration: none;
-    text-align: left;
+    text-decoration: none; 
 }
 
 #spotifyAlbum:hover {
@@ -214,20 +390,24 @@ body {
 
 .midText {
     color: var(--color2);
-    font-size: var(--font-small);
+    font-size: var(--font-regular);
 }
 
-#spotifyListeningTo {
+.aboutMeUpperTitle {
+    color: var(--color2);
     font-size: var(--font-small);
     margin: 0 0 20px 0;
 }
 
-#spotifyTitle{
+#spotifyTitle {
     margin: 0 0 0 12px;
+    text-align: left;
+}
+
+#spotifyTitle {   
     display: flex;
     flex-wrap: nowrap;
     align-items: center;
-    text-align: left;
 }
 
 #spotifyTitle i {
@@ -240,6 +420,31 @@ body {
     font-size: var(--font-small);
 }
 
+#irl_skills_parts {
+    display: flex;
+    flex-direction: row;
+}
+
+.irl_skills_part {
+    margin: 0px 5px;
+}
+
+.irl_skills_sub {
+    display: flex;
+    
+}
+
+.irl_skills_sub p {
+    font-size: var(--font-small);
+    color: var(--light2);
+    flex-grow: 2;
+    text-align: right;
+}
+
+.irl_skills_sub img {
+    height: 25px;
+}
+
 /*
     Pixel-Art
 */
@@ -250,6 +455,7 @@ body {
     width: 150px;
     height: 150px;
     object-fit: cover;
+    filter: drop-shadow(0px 0px 10px var(--mid));
 }
 
 #pixelArt0 {
@@ -283,8 +489,12 @@ body {
 
 #arrowLeftText {
     position: absolute;
-    top: 65%;
+    top: 67%;
     left: 220px;
+}
+
+#arrowLeftText:hover {
+    color: var(--color1);
 }
 
 #arrowRight {
@@ -367,7 +577,11 @@ body {
     }
 }
 
-@media (max-width: 900px){
+@media (max-width: 1100px){
+
+    #toggleMid, #toggleMidBack {
+        display: none;
+    }
 
     #mobile {
         display: flex;
@@ -409,8 +623,14 @@ body {
     }
 
     #midContent {
+        opacity: 1 !important;
         flex-grow: 0;
         bottom: 300px;
+        margin: 30px;        
+    }
+
+    #aboutme {
+        opacity: 1 !important;
     }
 
     #leftContent {
@@ -436,6 +656,7 @@ body {
         height: 100px;
         transform: rotate(-5deg);
         margin-right: 20px;
+        filter: drop-shadow(0px 0px 5px var(--mid));
     }
 
     .link  {
@@ -443,10 +664,11 @@ body {
         width: auto;
     }
 
-    #spotify {
+    #aboutme {
         position: relative;
-        margin: 50px;
+        margin: 30px;
         flex-direction: column;
+        z-index: 1;
     }
 
     #spotifyAlbum {
@@ -456,6 +678,11 @@ body {
     #vinyl {
         display: none;
     }
+
+    #irl_skills_parts {
+        flex-direction: column;
+    }
+    
 
 }
 
