--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
     --color2: #BC4A9B;
     --color3: #793A80;
     --font-tiny: 0.8em;
+    --font-tinyuppercase: 0.9em;
     --font-small: 1em;
     --font-regular: 1.2em;
     --font-medium: 1.5em;
@@ -179,7 +180,7 @@ body {
     padding: 10px 10px 0px 10px;
 }
 
-#irl_skills {
+#irl_skills, #irl_frameworks {
     padding: 10px;
 }
 
@@ -204,12 +205,17 @@ body {
 }
 
 #irl_about img {
-    width: auto;
-    height: 90px;
-    border-radius: 5px;
+    width: 100px;
+    height: 100px;
+    border-radius: 30px;
     object-fit: cover;
-    padding: 0 10px;
+    margin: 5px 20px;
     pointer-events: none;
+}
+
+#irl_about_right {
+    max-width: 300px;
+    padding-right: 20px;
 }
 
 #aboutMeControls {
@@ -493,6 +499,34 @@ body {
 .irl_skills_sub img {
     height: 25px;
     pointer-events: none;
+}
+
+.irl_subdiv {
+    margin: 5px 5px 10px 5px;
+    font-size: var(--font-small);
+    color: var(--light2);
+    text-align: left;
+}
+
+.irl_subdiv p {
+    margin: 0;
+    color: var(--color2);
+    text-align: left;
+    font-size: var(--font-regular);
+}
+
+#irl_frameworks_sub {
+    margin: 0 20px 20px 20px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+#irl_frameworks_sub i {
+    font-size: 30px;
+    color: var(--light1);
 }
 
 #irl_music {
@@ -825,6 +859,17 @@ body {
         display: none;
     }
     
+    #irl_about_bot {
+        flex-direction: column;
+    }
+
+    .irl_subdiv, .irl_subdiv p {
+        text-align: center;
+    }
+
+    #irl_about_right {
+        padding: 0;
+    }
 
 }
 
