--- a/style.css
+++ b/style.css
@@ -737,6 +737,29 @@ body {
     pointer-events: none;
 }
 
+@keyframes star-animation-1 {
+    0%   {opacity: 100%;}
+    50%  {opacity: 0%;}
+    100% {opacity: 100%;}
+}
+
+@keyframes star-animation-2 {
+    0%   {opacity: 30%;}
+    50%  {opacity: 70%;}
+    100% {opacity: 30%;}
+}
+
+@keyframes star-animation-3 {
+    0%   {transform: rotate(0deg);}
+    50% {transform: rotate(180deg);}
+    100% {transform: rotate(360deg);}
+}
+
+@keyframes star-animation-4 {
+    0%   {transform: rotate(70deg); transform: translateX(0px);}
+    100% {transform: rotate(70deg); transform: translateX(-1000px);}
+}
+
 @media (max-width: 1100px){
 
     #img-0-mobile, #img-1-mobile, #img-2-mobile, #img-3-mobile, #img-4-mobile {
@@ -906,23 +929,26 @@ body {
 
 }
 
-/*
+@media (min-width: 1100px) {
+    /*
     Scrollbar
- */
-::-webkit-scrollbar {
-    width: 10px;
+     */
+    ::-webkit-scrollbar {
+        width: 10px;
+    }
+
+    ::-webkit-scrollbar-track {
+        background: linear-gradient(0deg, var(--dark2), #db0000);
+        background: var(--dark2);
+        background-size: 400% 100%;
+    }
+
+    ::-webkit-scrollbar-thumb {
+        background: var(--mid);
+    }
+
+    ::-webkit-scrollbar-thumb:hover {
+        background: var(--light1);
+    }
 }
 
-::-webkit-scrollbar-track {
-    background: linear-gradient(0deg, var(--dark2), #db0000);
-    background: var(--dark2);
-    background-size: 400% 100%;
-}
-
-::-webkit-scrollbar-thumb {
-    background: var(--mid);
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background: var(--light1);
-}
